--- a/exercise4/exercise4-b.css
+++ b/exercise4/exercise4-b.css
@@ -3,6 +3,11 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+.clearfix::after {
+	content: "";
+	display: block;
+	clear: both;
+}
 .header {
 	width: 100%;
 	height: 50px;
@@ -13,17 +18,28 @@
 	height: 500px;
 	background-color: orange;
 }
+.sidebar-left {
+	width: 230px;
+	height: 1400px;
+	background-color: palegreen;
+	float: left;
+}
 .main{
 	width: 960px;
-	height: 1400px;
-	background-color: yellowgreen;
 	margin: 0 auto;
+	background-color: violet;
 }
 .blog{
 	width: 500px;
 	height: 1400px;
+	float: left;
 	background-color: green;
-	margin: 0 auto;
+}
+.sidebar-right{
+	width: 230px;
+	height: 1400px;
+	background-color: palegreen;
+	float: left;
 }
 .footer{
 	width: 100%;
